finalizei a imagem de fundo e iniciei a tela de login

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <title>Lembre-se</title>
 </head>
 <body>
-
+    <div id="embrulho">
+        <div id="caixa_imagem"></div>
+        <div>
+            <div class="">
+                <img src="./assets/Lembre-se-removebg-preview.png" alt="logo do sistema">
+                <form>
+                    <label for="e-mail">e-mail</label>
+                    <input type="email" name="e-mail" id="e-mail">
+                    <label for="senha">senha</label>
+                    <input type="password" name="senha" id="senha">
+                    <button>Login</button>
+                    <button>Cadastrar</button>
+                    <a href="">Esqueceu a senha</a>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
