Realizado posicionamento e estilização do formulário.

--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 <body>
     <div id="embrulho">
         <div id="caixa_imagem"></div>
-        <div>
-            <div class="">
-                <img src="./assets/Lembre-se-removebg-preview.png" alt="logo do sistema">
-                <form>
-                    <label for="e-mail">e-mail</label>
+        <div id="caixa_login">
+            <div id="conteudo_caixa_login">
+                <img src="./assets/Lembre-se-removebg-preview.png" alt="logo do sistema" class="estilizacao_logo">
+                <form class="form_basico">
+                    <label for="e-mail">E-mail</label>
                     <input type="email" name="e-mail" id="e-mail">
-                    <label for="senha">senha</label>
+                    <label for="senha">Senha</label>
                     <input type="password" name="senha" id="senha">
-                    <button>Login</button>
-                    <button>Cadastrar</button>
+                    <div class="estilo_botao">
+                        <button>Login</button>
+                        <button>Cadastrar</button>
+                    </div>
                     <a href="">Esqueceu a senha</a>
                 </form>
             </div>
