terminando de estilizar a tela de login

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                         <button>Login</button>
                         <button>Cadastrar</button>
                     </div>
-                    <a href="">Esqueceu a senha</a>
+                    <span id="lembra-senha">
+                        <a href="">Esqueceu a senha</a>
+                    </span>
                 </form>
             </div>
         </div>
