criando a pagina de login e fazendo ela se comunicar com o backend

--- a/pages/signUp/signUp.html
+++ b/pages/signUp/signUp.html
@@ -17,7 +17,7 @@
         <div id="caixa_login">
             <div id="conteudo_caixa_login">
                 <img src="../../assets/Lembre-se-removebg-preview.png" alt="logo do sistema" class="estilizacao_logo">
-                <form class="form_basico">
+                <form class="form_basico" id="form_cadastro">
                     <label for="name">Nome</label>
                     <input type="text" name="name" id="name">
                     <label for="e-mail">E-mail</label>
@@ -31,6 +31,7 @@
             </div>
         </div>
     </div>
+    <script src="./signUp.js"></script>
 </body>
 
 </html>
